Feature: bulk update preliminary impl
